--- a/index.html
+++ b/index.html
@@ -3,9 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 3 Hockeys </title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
-<body>
-    
-</body>
-</html>
+<body class="text-sm lg:text-base font-['Manrope']">
+    <header class="container mx-auto">
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                    </div>
+                    <ul tabindex="0" class="menu text-sm lg:text-base menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li><a class="text-red-500 font-bold">Home</a></li>
+                        <li>
+                            <a>About</a>
+                        </li>
+                        <li><a>Pages</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Contact</a></li>
+                    </ul>
+                  </div>
+                  <a class="btn btn-ghost text-2xl
+                  lg:text-4xl gap-0 font-extrabold">Hockey<span class="text-red-500">’</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu text-sm lg:text-base menu-horizontal px-1">
+                    <li><a class="text-red-500 font-bold">Home</a></li>
+                    <li>
+                        <a>About</a>
+                    </li>
+                    <li><a>Pages</a></li>
+                    <li><a>Blog</a></li>
+                    <li><a>Contact</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end">
+                    <button class="btn btn-ghost btn-circle hidden md:block">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+                      </button>
+                  <a class="btn bg-red-500 text-white text-lg lg:text-xl">Get Ticket</a>
+                </div>
+              </div>
+        </nav>
+    </header>
+    <main class="md:relative container px-4 md:mx-auto">
+        <!-- carousel slider -->
+        <div class="carousel h-52 md:h-[60vh] w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="Images/1.png" class="w-full" />
+              <div class="absolute flex gap-4 bottom-2 md:bottom-14 items-center justify-center md:justify-start left-0 right-0 md:left-5">
+                <a href="#slide4" class="btn btn-circle bg-black border-none text-white hover:text-black">❮</a> 
+                <a href="#slide2" class="btn btn-circle bg-black border-none text-white hover:text-black">❯</a>
+              </div>
+            </div> 
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
+              <div class="absolute flex gap-4 bottom-2 md:bottom-14 items-center justify-center md:justify-start left-0 right-0 md:left-5">
+                <a href="#slide1" class="btn btn-circle bg-black border-none text-white hover:text-black">❮</a> 
+                <a href="#slide3" class="btn btn-circle bg-black border-none text-white hover:text-black">❯</a>
+              </div>
+            </div> 
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="https://daisyui.com/images/stock/photo-1414694762283-acccc27bca85.jpg" class="w-full" />
+              <div class="absolute flex gap-4 bottom-2 md:bottom-14 items-center justify-center md:justify-start left-0 right-0 md:left-5">
+                <a href="#slide2" class="btn btn-circle bg-black border-none text-white hover:text-black">❮</a> 
+                <a href="#slide4" class="btn btn-circle bg-black border-none text-white hover:text-black">❯</a>
+              </div>
+            </div> 
+            <div id="slide4" class="carousel-item relative w-full">
+              <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" />
+              <div class="absolute flex gap-4 bottom-2 md:bottom-14 items-center justify-center md:justify-start left-0 right-0 md:left-5">
+                <a href="#slide3" class="btn btn-circle bg-black border-none text-white hover:text-black">❮</a> 
+                <a href="#slide1" class="btn btn-circle bg-black border-none text-white hover:text-black">❯</a>
+              </div>
+            </div>
+          </div>
+          <!-- slider container -->
+          <div class="md:absolute md:-mt-40 md:right-10 card md:w-1/2 bg-black text-white p-5 mx-auto">
+            <h1 class="font-bold text-lg lg:text-2xl">Meet all the heroes from the field</h1>
+            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat dolor. Purus urna in sit nullam proin.</p>
+          </div>
+          <!-- progress part -->
+          <section class="text-center border border-dotted border-l-0 border-r-0 py-8 my-3">
+                    <h1 class="font-bold text-[22px] lg:text-4xl mb-3">Professional Hockeys Club</h1>
+                    <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat <br> dolor. Purus urna in sit nullam proin.</p>
+          </section>
+          <div class="grid grid-cols-1 lg:grid-cols-4 gap-4 lg:mb-20">
+            <div class="text-center">
+                <div class="radial-progress text-gray-200 mb-3" style="--value:100; --size:7rem;" role="progressbar"><div class="radial-progress z-10 text-red-500 rotate-90 scale-x-[-1]" style="--value:87; --size:7rem;" role="progressbar"> <div class="text-black font-bold text-xl rotate-90 scale-x-[-1]">87%</div>  </div></div>
+                <h2 class="font-bold text-xl mb-2">Prayer Facility</h2>
+                <p>Amet consectetur. Condimentum dignissim adipiscing.</p>
+            </div>
+            <div class="text-center">
+              <div class="radial-progress text-gray-200 mb-3" style="--value:100; --size:7rem;" role="progressbar"><div class="radial-progress text-green-500 z-10 rotate-90 scale-x-[-1]" style="--value:95; --size:7rem;" role="progressbar"> <div class="text-black font-bold text-xl rotate-90 scale-x-[-1]">95%</div>  </div></div>
+                <h2 class="font-bold text-xl mb-2">Experienced Coach</h2>
+                <p>Amet consectetur. Condimentum dignissim adipiscing.</p>
+            </div>
+            <div class="text-center">
+              <div class="radial-progress text-gray-200 mb-3" style="--value:100; --size:7rem;" role="progressbar"><div class="radial-progress text-orange-500 z-10 rotate-90 scale-x-[-1]" style="--value:90; --size:7rem;" role="progressbar"> <div class="text-black font-bold text-xl rotate-90 scale-x-[-1]">90%</div>  </div></div>
+                <h2 class="font-bold text-xl mb-2">Senior Player</h2>
+                <p>Amet consectetur. Condimentum dignissim adipiscing.</p>
+            </div>
+            <div class="text-center">
+              <div class="radial-progress text-gray-200 mb-3" style="--value:100; --size:7rem;" role="progressbar"><div class="radial-progress text-blue-500 z-10 rotate-90 scale-x-[-1]" style="--value:80; --size:7rem;" role="progressbar"> <div class="text-black font-bold text-xl rotate-90 scale-x-[-1]">80%</div>  </div></div>
+                <h2 class="font-bold text-xl mb-2">Training Ground</h2>
+                <p>Amet consectetur. Condimentum dignissim adipiscing.</p>
+            </div>
+          </div>
+          <!-- Program Section -->
+          <section class="text-center border border-dotted border-l-0 border-r-0 py-8 my-3">
+            <h1 class="font-extrabold text-[22px] lg:text-4xl mb-3">Program Section</h1>
+            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat <br> dolor. Purus urna in sit nullam proin.</p>
+        </section>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+            <div class="card p-5 pt-36 bg-[url('Images/2.png')] bg-[#8b8a8a] bg-no-repeat bg-center bg-cover bg-blend-multiply text-white">
+                <h1 class="font-bold text-xl lg:text-[28px] mb-3">Junior Program</h1>
+            <p class="lg:w-2/3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <button class="btn bg-red-500 text-white w-52 border-none my-2">
+                Register Now
+            </button>
+            </div>
+            <div class="card p-5 pt-36 bg-[url('Images/3.png')] bg-[#8b8a8a] bg-no-repeat bg-center bg-cover bg-blend-multiply text-white">
+                <h1 class="font-bold text-xl lg:text-[28px]  mb-3">Teenager Program</h1>
+                <p class="lg:w-2/3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <button class="btn bg-red-500 text-white w-52 border-none my-2">
+                Register Now
+            </button>
+            </div>
+            <div class="card lg:col-span-2 p-5 pt-36 bg-[url('Images/4.png')] bg-[#8b8a8a] bg-no-repeat bg-center bg-cover bg-blend-multiply text-white">
+                <h1 class="font-bold text-xl lg:text-[28px]  mb-3">Professional Program</h1>
+                <p class="lg:w-1/3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <button class="btn bg-red-500 text-white w-52 border-none my-2">
+                Register Now
+            </button>
+            </div>
+        </div>
+         
