error fixed and program section done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Assignment 3 Hockey </title>
 </head>
 <body class="text-sm lg:text-base font-['Manrope']">
     <header class="container mx-auto">
@@ -70,6 +70,8 @@
                 <a href="#slide3" class="btn btn-circle bg-black border-none text-white hover:text-black">❯</a>
               </div>
             </div> 
+           
+          </div>
           <!-- slider container -->
           <div class="md:absolute md:-mt-40 md:right-10 card md:w-1/2 bg-black text-white p-5 mx-auto">
             <h1 class="font-bold text-lg lg:text-2xl">Meet all the heroes from the field</h1>
@@ -102,6 +104,38 @@
                 <p>Amet consectetur. Condimentum dignissim adipiscing.</p>
             </div>
           </div>
+          <!-- Program Section -->
+          <section class="text-center border border-dotted border-l-0 border-r-0 py-8 my-3">
+            <h1 class="font-extrabold text-[22px] lg:text-4xl mb-3">Program Section</h1>
+            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat <br> dolor. Purus urna in sit nullam proin.</p>
+        </section>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+            <div class="card p-5 pt-36 bg-[url('Images/2.png')] bg-[#8b8a8a] bg-no-repeat bg-center bg-cover bg-blend-multiply text-white">
+                <h1 class="font-bold text-xl lg:text-[28px] mb-3">Junior Program</h1>
+            <p class="lg:w-2/3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+              enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <button class="btn bg-red-500 text-white w-52 border-none my-2">
+                Register Now
+            </button>
+            </div>
+            <div class="card p-5 pt-36 bg-[url('Images/3.png')] bg-[#8b8a8a] bg-no-repeat bg-center bg-cover bg-blend-multiply text-white">
+                <h1 class="font-bold text-xl lg:text-[28px]  mb-3">Teenager Program</h1>
+                <p class="lg:w-2/3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <button class="btn bg-red-500 text-white w-52 border-none my-2">
+                Register Now
+            </button>
+            </div>
+            <div class="card lg:col-span-2 p-5 pt-36 bg-[url('Images/4.png')] bg-[#8b8a8a] bg-no-repeat bg-center bg-cover bg-blend-multiply text-white">
+                <h1 class="font-bold text-xl lg:text-[28px]  mb-3">Professional Program</h1>
+                <p class="lg:w-1/3">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                  enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+            <button class="btn bg-red-500 text-white w-52 border-none my-2">
+                Register Now
+            </button>
+            </div>
+        </div>
+        
     </main>
     <footer class="bg-black mt-5 pt-8">
         <div class="container text-[#FFFFFF99] py-8 mx-auto text-base footer justify-items-center">
