--- a/index.html
+++ b/index.html
@@ -135,7 +135,104 @@
             </button>
             </div>
         </div>
-        
+         <!-- Product Section -->
+         <section class="text-center border border-dotted border-l-0 border-r-0 py-8 my-3">
+            <h1 class="font-extrabold text-[22px] lg:text-4xl mb-3">Our New Products</h1>
+            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat <br> dolor. Purus urna in sit nullam proin.</p>
+        </section>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+            <div class="card border">
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <i class="fa-solid fa-star text-orange-500"></i> <span class="mx-2 text-gray-500"> 5.0</span>
+                        <i class="fa-regular fa-eye text-gray-500"></i> <span class="mx-2 text-gray-500">20</span> 
+                        <i class="fa-regular fa-heart text-gray-500"></i><span class="mx-2 text-gray-500">200</span>
+                        <h1 class="text-xl font-bold my-2">World Cup Flags Football</h1>
+                        <p class="pb-2 text-base">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <p class="font-bold text-lg text-red-500 flex flex-col lg:flex-row justify-between">Price - $22.00 <span class="text-gray-500 font-normal text-base"><i class="fa-solid fa-cart-plus text-gray-500 lg:mx-2"></i> Delivery Fee : Free</span></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="card border">
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img src="Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <i class="fa-solid fa-star text-orange-500"></i> <span class="mx-2 text-gray-500"> 5.0</span>
+                        <i class="fa-regular fa-eye text-gray-500"></i> <span class="mx-2 text-gray-500">20</span> 
+                        <i class="fa-regular fa-heart text-gray-500"></i><span class="mx-2 text-gray-500">200</span>
+                        <h1 class="text-xl font-bold my-2">World Cup Flags Football</h1>
+                        <p class="pb-2 text-base">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <p class="font-bold text-red-500 text-lg flex flex-col lg:flex-row justify-between">Price - $22.00 <span class="text-gray-500 font-normal text-base"><i class="fa-solid fa-cart-plus text-gray-500 lg:mx-2"></i> Delivery Fee : Free</span></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="card border">
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img src="Images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <i class="fa-solid fa-star text-orange-500"></i> <span class="mx-2 text-gray-500"> 5.0</span>
+                        <i class="fa-regular fa-eye text-gray-500"></i> <span class="mx-2 text-gray-500">20</span> 
+                        <i class="fa-regular fa-heart text-gray-500"></i><span class="mx-2 text-gray-500">200</span>
+                        <h1 class="text-xl font-bold ">Cap For Hockeys</h1>
+                        <p class="py-2 text-base">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <p class="font-bold text-red-500 text-lg flex flex-col lg:flex-row justify-between">Price - $22.00 <span class="text-gray-500 font-normal text-base"><i class="fa-solid fa-cart-plus text-gray-500 lg:mx-2"></i> Delivery Fee : Free</span></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="card border">
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img src="Images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <i class="fa-solid fa-star text-orange-500"></i> <span class="mx-2 text-gray-500"> 5.0</span>
+                        <i class="fa-regular fa-eye text-gray-500"></i> <span class="mx-2 text-gray-500">20</span> 
+                        <i class="fa-regular fa-heart text-gray-500"></i><span class="mx-2 text-gray-500">200</span>
+                        <h1 class="text-xl font-bold my-2">World Cup Flags Football</h1>
+                        <p class="pb-2 text-base ">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <p class="font-bold text-red-500 text-lg flex flex-col lg:flex-row justify-between">Price - $22.00 <span class="text-gray-500 font-normal text-base"><i class="fa-solid fa-cart-plus text-gray-500 lg:mx-2"></i> Delivery Fee : Free</span></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="card border">
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img src="Images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <i class="fa-solid fa-star text-orange-500"></i> <span class="mx-2 text-gray-500"> 5.0</span>
+                        <i class="fa-regular fa-eye text-gray-500"></i> <span class="mx-2 text-gray-500">20</span> 
+                        <i class="fa-regular fa-heart text-gray-500"></i><span class="mx-2 text-gray-500">200</span>
+                        <h1 class="text-xl font-bold my-2">World Cup Flags Football</h1>
+                        <p class="pb-2 text-base">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <p class="font-bold text-red-500 text-lg flex flex-col lg:flex-row justify-between">Price - $22.00 <span class="text-gray-500 font-normal text-base"><i class="fa-solid fa-cart-plus text-gray-500 lg:mx-2"></i> Delivery Fee : Free</span></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="card border">
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img src="Images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
+                      <div>
+                        <i class="fa-solid fa-star text-orange-500"></i> <span class="mx-2 text-gray-500"> 5.0</span>
+                        <i class="fa-regular fa-eye text-gray-500"></i> <span class="mx-2 text-gray-500">20</span> 
+                        <i class="fa-regular fa-heart text-gray-500"></i><span class="mx-2 text-gray-500">200</span>
+                        <h1 class="text-xl font-bold my-2">World Cup Flags Football</h1>
+                        <p class="pb-2 text-base">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <p class="font-bold text-red-500 text-lg flex flex-col lg:flex-row justify-between">Price - $22.00 <span class="text-gray-500 font-normal text-base"><i class="fa-solid fa-cart-plus text-gray-500 lg:mx-2"></i> Delivery Fee : Free</span></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+         
     </main>
     <footer class="bg-black mt-5 pt-8">
         <div class="container text-[#FFFFFF99] py-8 mx-auto text-base footer justify-items-center">
