--- a/index.html
+++ b/index.html
@@ -232,7 +232,146 @@
                   </div>
             </div>
         </div>
-         
+         <!-- FAQ Section -->
+         <section class="text-center border border-dotted border-l-0 border-r-0 py-8 my-3">
+            <h1 class="font-extrabold text-[22px] lg:text-4xl mb-3">Clients Question</h1>
+            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat <br> dolor. Purus urna in sit nullam proin.</p>
+        </section>
+       <div class="card border">
+        <div class="flex flex-col justify-between lg:flex-row p-5">
+              <img src="Images/11.png" class="rounded-lg" />
+              <div class="lg:w-1/2">
+                <div class="collapse collapse-plus">
+                    <input type="radio" name="my-accordion-3" checked="checked" /> 
+                    <div class="collapse-title text-xl font-bold">
+                        Our Equipment
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-bold">
+                        Hockey Training
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-bold">
+                        Private Lessons
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-bold">
+                        Ski Touring
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-bold">
+                        Booking
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-plus">
+                    <input type="radio" name="my-accordion-3" /> 
+                    <div class="collapse-title text-xl font-bold">
+                        Pricings
+                    </div>
+                    <div class="collapse-content"> 
+                      <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                    </div>
+                  </div>
+                  
+              </div>
+            </div>
+       </div>
+       <!-- Get in touch Section -->
+       <section class="text-center border border-dotted border-l-0 border-r-0 py-8 my-3">
+        <h1 class="font-extrabold text-[22px] lg:text-4xl mb-3">Get In Touch </h1>
+        <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam trupis placerat <br> dolor. Purus urna in sit nullam proin.</p>
+    </section>
+    <div class="hero">
+        <div class="hero-content w-full flex-col lg:flex-row">
+          <div class="card border p-3 lg:p-8 w-full lg:w-1/3 space-y-3">
+            <div class="card bg-[#BCED6D1A] p-5 ">
+                <img src="Images/Group 1171275317.png" alt="" height="44px" width="44px" >
+                <p class="text-gray-400 mt-3 mb-1">Phone Number:</p>
+                <p class="text-lg font-extrabold">(+62) 123-321-543</p>
+            </div>
+            <div class="card bg-[#FDDD5F1A] p-5">
+                <img src="Images/Group 1171275318.png" alt="" height="44px" width="44px" >
+                <p class="text-gray-400 mt-3 mb-1">Email:</p>
+                <p class="text-lg font-extrabold">hockeys@support.com</p>
+            </div>
+            <div class="card bg-[#629CF31A] p-5">
+                <img src="Images/Group 1171275321.png" alt="" height="44px" width="44px" >
+                <p class="text-gray-400 mt-3 mb-1">Location:</p>
+                <p class="text-lg font-extrabold">152/1 Mohakhali Wireless Gate</p>
+            </div>
+          </div>
+          <div class="lg:w-3/4 w-full">
+            <form class="lg:grid lg:grid-cols-2 lg:gap-4">
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text font-bold">Your Name</span>
+                </label>
+                <input type="email" placeholder="Enter your full name" class="input input-bordered" required />
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text font-bold">Your Email</span>
+                </label>
+                <input type="email" placeholder="Enter your email" class="input input-bordered" required />
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text font-bold">Subject	</span>
+                </label>
+                <input type="email" placeholder="Enter your Subject" class="input input-bordered" required />
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text font-bold">Phone Number</span>
+                </label>
+                <input type="phone" placeholder="Enter your phone number" class="input input-bordered" required />
+              </div>
+              <div class="form-control lg:col-span-2">
+                <label class="label">
+                  <span class="label-text font-bold">Message</span>
+                </label>
+                <textarea placeholder="Write your message" rows="5" class="textarea textarea-bordered" required ></textarea>
+              </div>
+              <div class="form-control mt-6 col-span-2">
+                <button class="btn text-white bg-red-500 border-none">Message</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- Social Media -->
+      <section class="text-center bg-gray-100 p-6">
+        <h2 class="font-bold text-2xl mb-3">Social Media</h2>
+        <div class="flex justify-center space-x-3 text-xl">
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
+      </section>
     </main>
     <footer class="bg-black mt-5 pt-8">
         <div class="container text-[#FFFFFF99] py-8 mx-auto text-base footer justify-items-center">
